[metadata]
name = spotipy-random
version = 0.0.3
author = Michael Malek, Lennard Beers
author_email = michimalek00@gmail.com, l.beers@outlook.de
description = Extends the spotipy API client with randomized search.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michimalek/spotipy-random
project_urls =
    Bug Tracker = https://github.com/michimalek/spotipy-random/issues
install_requires=["spotipy"]    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src